--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,20 @@ spring:
       name: cognito-sb-demo
   security:
     oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: https://cognito-idp.sa-east-1.amazonaws.com/sa-east-1_nxp88S3Dy
+      client:
+        registration:
+          cognito:
+            client-id: client-id
+            client-secret: client-secret
+            scope:
+              - email
+              - openid
+              - phone
+            # Spring Security by default uses a redirect-uri in the format: {baseUrl}/login/oauth2/code/{registrationId}
+            # For example: http://localhost:8080/login/oauth2/code/cognito
+            # See more: https://docs.spring.io/spring-security/reference/servlet/oauth2/login/core.html#oauth2login-sample-redirect-uri
+            redirect-uri: https://localhost:8080/v1/user
+        provider:
+          cognito:
+            issuerUri: issuer-uri
+            user-name-attribute: username
