--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,4 +9,4 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: https://cognito-idp.sa-east-1.amazonaws.com/sa-east-1_nxp88S3Dy
+          issuer-uri: https://cognito-idp.sa-east-1.amazonaws.com/sa-east-1_dwJFEAidQ
